--- a/rocketseat/rockeseat-bootcamp/reactjs/01-ignite-feed/index.html
+++ b/rocketseat/rockeseat-bootcamp/reactjs/01-ignite-feed/index.html
@@ -9,12 +9,12 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
 
-    <title>Vite + React</title>
+    <title>Todo List</title>
   </head>
   <body>
     <div id="root"></div>
